Fix modal widths on some screen sizes
Add a max width to the base modal CSS class. This prevents the fixed-width modals from being too large on some screen sizes.

--- a/frontend/src/Components/Modal/Modal.css
+++ b/frontend/src/Components/Modal/Modal.css
@@ -20,6 +20,7 @@
   position: relative;
   display: flex;
   max-height: 90%;
+  max-width: 90%;
   border-radius: 6px;
   opacity: 1;
 }
